# alerttomaild

./: .gitignore  README.md  buslisten.cpp  buslisten.hpp  conf.cpp  conf.hpp  daemon.cpp  daemon.hpp  main.cpp  meson.build
conf/: alerttomaild.sample.conf  alerttomaild.service
